fixing bug on iOS by assigning AudioContext

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ div {
     padding: 20px 20px;
     max-width: 27vw;
     margin: auto;
+    height: 25vh;
 }
 
 div button {
